+ alteração nos form

--- a/Aluguel-PowerLook/Aluguel-PowerLook/Aluguel-PowerLook.csproj
+++ b/Aluguel-PowerLook/Aluguel-PowerLook/Aluguel-PowerLook.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form_cad_vestido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_cad_vestido.Designer.cs">
+      <DependentUpon>Form_cad_vestido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_cad_funcionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_cad_funcionario.Designer.cs">
+      <DependentUpon>Form_cad_funcionario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_cad_cliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,11 +78,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form_cad_vestido.resx">
+      <DependentUpon>Form_cad_vestido.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_cad_cliente.resx">
       <DependentUpon>Form_cad_cliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_cad_fornecedor.resx">
       <DependentUpon>Form_cad_fornecedor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_cad_funcionario.resx">
+      <DependentUpon>Form_cad_funcionario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_principal.resx">
       <DependentUpon>Form_principal.cs</DependentUpon>
