Criação de novos formularios

--- a/Aluguel-PowerLook/Aluguel-PowerLook/Aluguel-PowerLook.csproj
+++ b/Aluguel-PowerLook/Aluguel-PowerLook/Aluguel-PowerLook.csproj
@@ -46,6 +46,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cadastro.cs" />
+    <Compile Include="Conexao.cs" />
+    <Compile Include="Devolucao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Devolucao.Designer.cs">
+      <DependentUpon>Devolucao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_locacao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_locacao.Designer.cs">
+      <DependentUpon>Form_locacao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_cad_vestido.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +104,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Devolucao.resx">
+      <DependentUpon>Devolucao.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_cad_vestido.resx">
       <DependentUpon>Form_cad_vestido.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,8 +122,14 @@
     <EmbeddedResource Include="Form_cad_funcionario.resx">
       <DependentUpon>Form_cad_funcionario.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form_locacao.resx">
+      <DependentUpon>Form_locacao.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_principal.resx">
       <DependentUpon>Form_principal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
