--- a/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,14 +47,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Form_cad_Fornecedor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form_cad_Fornecedor.Designer.cs">
+      <DependentUpon>Form_cad_Fornecedor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_cad_produto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_cad_produto.Designer.cs">
+      <DependentUpon>Form_cad_produto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_principal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_principal.Designer.cs">
+      <DependentUpon>Form_principal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MeusFormularios.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form_cad_Fornecedor.resx">
+      <DependentUpon>Form_cad_Fornecedor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_cad_produto.resx">
+      <DependentUpon>Form_cad_produto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_principal.resx">
+      <DependentUpon>Form_principal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,7 +85,16 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="Properties\DataSources\DBPowerLook.DAL.Enderecos.datasource" />
+    <None Include="Properties\DataSources\DBPowerLook.DAL.Fornecedores.datasource" />
+    <None Include="Properties\DataSources\DBPowerLook.DAL.Locacoes.datasource" />
+    <None Include="Properties\DataSources\DBPowerLook.DAL.PessoaFisica.datasource" />
+    <None Include="Properties\DataSources\DBPowerLook.DAL.PessoaJurifica.datasource" />
+    <None Include="Properties\DataSources\DBPowerLook.DAL.Produtos.datasource" />
+    <None Include="Properties\DataSources\DBPowerLook.DAL.TipoUsuario.datasource" />
+    <None Include="Properties\DataSources\DBPowerLook.DAL.Usuarios.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -75,6 +107,37 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imagem\Cliente.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imagem\Busca.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imagem\Aluguel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imagem\Devolução.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imagem\Fornecedor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imagem\Funcionario.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imagem\Relatorio.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imagem\Vestido.png" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DBPowerLook.DAL\DBPowerLook.DAL.csproj">
+      <Project>{140a4a0b-ca36-4f8b-b945-e1670003684f}</Project>
+      <Name>DBPowerLook.DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
