--- a/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Form_cad_Fornecedor.Designer.cs">
       <DependentUpon>Form_cad_Fornecedor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_cad_funcionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_cad_funcionario.Designer.cs">
+      <DependentUpon>Form_cad_funcionario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_cad_produto.cs">
       <SubType>Form</SubType>
     </Compile>
