--- a/PowerLook-Aluguel/DBPowerLook.DAL/DBPowerLook.DAL.csproj
+++ b/PowerLook-Aluguel/DBPowerLook.DAL/DBPowerLook.DAL.csproj
@@ -48,6 +48,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>PowerLook.dbml</DependentUpon>
     </Compile>
+    <Compile Include="PowerLookDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PowerLookDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -64,6 +69,17 @@
     </None>
     <None Include="PowerLook.dbml.layout">
       <DependentUpon>PowerLook.dbml</DependentUpon>
+    </None>
+    <None Include="PowerLookDataSet.xsc">
+      <DependentUpon>PowerLookDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="PowerLookDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PowerLookDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="PowerLookDataSet.xss">
+      <DependentUpon>PowerLookDataSet.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
