--- a/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
@@ -65,6 +65,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form_buscas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_buscas.Designer.cs">
+      <DependentUpon>Form_buscas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_busca_CategoriaVestido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_busca_CategoriaVestido.Designer.cs">
+      <DependentUpon>Form_busca_CategoriaVestido.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_Venda.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +158,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <EmbeddedResource Include="Form_buscas.resx">
+      <DependentUpon>Form_buscas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_busca_CategoriaVestido.resx">
+      <DependentUpon>Form_busca_CategoriaVestido.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_cad_categoria.resx">
       <DependentUpon>Form_cad_categoria.cs</DependentUpon>
     </EmbeddedResource>
