--- a/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Form_busca_CategoriaVestido.Designer.cs">
       <DependentUpon>Form_busca_CategoriaVestido.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_relatorio_venda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_relatorio_venda.Designer.cs">
+      <DependentUpon>Form_relatorio_venda.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_Venda.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -198,6 +204,9 @@
       <DependentUpon>Form_relatorio_produto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Cliente.rdlc" />
+    <EmbeddedResource Include="Form_relatorio_venda.resx">
+      <DependentUpon>Form_relatorio_venda.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_Venda.resx">
       <DependentUpon>Form_Venda.cs</DependentUpon>
     </EmbeddedResource>
@@ -213,6 +222,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Vendas.rdlc" />
     <None Include="packages.config" />
     <None Include="PowerLookDataSet.xsc">
       <DependentUpon>PowerLookDataSet.xsd</DependentUpon>
