--- a/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
@@ -169,6 +169,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <EmbeddedResource Include="Cliente2.rdlc" />
     <EmbeddedResource Include="Form_buscas.resx">
       <DependentUpon>Form_buscas.cs</DependentUpon>
     </EmbeddedResource>
@@ -208,7 +209,6 @@
     <EmbeddedResource Include="Form_relatorio_produto.resx">
       <DependentUpon>Form_relatorio_produto.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Cliente.rdlc" />
     <EmbeddedResource Include="Form_relatorio_venda.resx">
       <DependentUpon>Form_relatorio_venda.cs</DependentUpon>
     </EmbeddedResource>
