--- a/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/PowerLook-Aluguel.csproj
@@ -83,6 +83,12 @@
     <Compile Include="Form_busca_FornecedorVestido.Designer.cs">
       <DependentUpon>Form_busca_FornecedorVestido.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_cad_usuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_cad_usuario.Designer.cs">
+      <DependentUpon>Form_cad_usuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_relatorio_venda.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -199,6 +205,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_cad_produto.resx">
       <DependentUpon>Form_cad_produto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_cad_usuario.resx">
+      <DependentUpon>Form_cad_usuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_login.resx">
       <DependentUpon>Form_login.cs</DependentUpon>
